# fdf

./: .gitignore  CMakeLists.txt  build  fdf.h
classes_lib/: CMakeLists.txt  Image.c  Image.h  MLXConn.c  Point.c  classes_lib.h  image.c  image.h  init_classes.c  linked_list.c  linked_list.h  mlxconn.c  mlxconn.h  new.c  new.h  point.c  point.h  string.c  string.h
libft/: Makefile
libft/ft_printf/libftprintf/: libft.h
libft/includes/: libft.h
src/: draw.c  draw_line.c  events.c  ft_print_error.c  key_events.c  list_helpers.c  loop.c  main.c  math.c  parsing.c  rendering.c  test_main.c  user_interface.c
test_maps/: test.fdf
